the perfect nav

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </style>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark">
+    <nav class="navbar fixed-top navbar-expand-lg navbar-dark">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
           <img
@@ -35,32 +35,64 @@
         >
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <div class="justify-content-center">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">홈</a>
+            <li class="nav-item mx-3 mt-1">
+              <a class="nav-link h5 active" aria-current="page" href="#">홈</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">둘러보기</a>
+            <li class="nav-item mx-3 mt-1">
+              <a class="nav-link h5" href="#">둘러보기</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">보관함</a>
+            <li class="nav-item mx-3 mt-1">
+              <a class="nav-link h5" href="#">보관함</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">돋보기</a>
+            <li class="nav-item mx-3 mt-1">
+              <a class="nav-link h5" href="#"
+                ><svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="15"
+                  height="20"
+                  fill="currentColor"
+                  class="bi bi-search"
+                  viewBox="0 0 16 16"
+                >
+                  <path
+                    d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"
+                  />
+                </svg>
+                &nbsp;&nbsp;검색</a
+              >
             </li>
           </ul>
-          <form class="d-flex">
-            <input
-              class="form-control me-2"
-              type="search"
-              placeholder="Search"
-              aria-label="Search"
-            />
-            <button class="btn btn-outline-success" type="submit">
-              Search
-            </button>
-          </form>
+        </div>
+        <div>
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item mx-3">
+              <a class="nav-link" href="#"
+                ><svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="20"
+                  height="20"
+                  fill="currentColor"
+                  class="bi bi-share"
+                  viewBox="0 0 16 16"
+                >
+                  <path
+                    d="M13.5 1a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3zM11 2.5a2.5 2.5 0 1 1 .603 1.628l-6.718 3.12a2.499 2.499 0 0 1 0 1.504l6.718 3.12a2.5 2.5 0 1 1-.488.876l-6.718-3.12a2.5 2.5 0 1 1 0-3.256l6.718-3.12A2.5 2.5 0 0 1 11 2.5zm-8.5 4a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3zm11 5.5a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3z"
+                  /></svg
+              ></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#"
+                ><img
+                  class="rounded-circle"
+                  width="30"
+                  height="30"
+                  src="https://yt3.ggpht.com/yti/APfAmoF9zdMG8jY1-54MQrR0SBTJJPtPDy0TBVbCDQ=s108-c-k-c0x00ffffff-no-rj"
+                  alt="user"
+              /></a>
+            </li>
+          </ul>
         </div>
       </div>
     </nav>
