--- a/index.html
+++ b/index.html
@@ -4,10 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Youtube Music</title>
+    <title>YouTube Music</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
+    />
+    <link
+      rel="icon"
+      href="https://music.youtube.com/favicon.ico"
+      sizes="16x16"
+      type="image/x-icon"
     />
     <style>
       html {
