added contents line

--- a/index.html
+++ b/index.html
@@ -8,6 +8,83 @@
     <title>YouTube Music</title>
   </head>
   <body>
+    <nav class="nav-bar">
+      <a class="nav-logo">
+        <img
+          src="https://music.youtube.com/img/on_platform_logo_dark.svg"
+          alt="sm-logo"
+        />
+      </a>
+      <div>
+        <ul class="nav-md-lists">
+          <li>홈</li>
+          <li>둘러보기</li>
+          <li>보관함</li>
+          <li><i class="fas fa-search"></i> <span>검색</span></li>
+        </ul>
+      </div>
+      <div>
+        <ul class="nav-end-lists">
+          <li><i class="fas fa-tv"></i></li>
+          <li>
+            <img
+              src="https://yt3.ggpht.com/yti/APfAmoF9zdMG8jY1-54MQrR0SBTJJPtPDy0TBVbCDQ=s108-c-k-c0x00ffffff-no-rj"
+              alt="user"
+            />
+          </li>
+        </ul>
+      </div>
+    </nav>
+    <main>
+      <div class="container">
+        <div class="sm-titles">
+          <p class="sm-title">LISTEN TO ‘DAWN FM’</p>
+          <h1 class="main-title">The Weeknd’s New Album</h1>
+        </div>
+      </div>
+      <ul class="contents">
+        <div class="album">
+          <img
+            src="https://lh3.googleusercontent.com/GjUl0h_qcK1hlTh_B5YnulMGAXHt2cO00HAxBxIyZ7gasXT75GJLkeogEWb04_0PXE_MSfl0dCoS2qeQhw=w544-h544-l90-rj"
+          />
+          <div><a>Dawn FM (Alternate World)</a></div>
+          <div><i class="fas fa-euro-sign"></i> 앨범 • <a>The Weeknd</a></div>
+        </div>
+        <div class="album">
+          <img
+            src="https://lh3.googleusercontent.com/MDXlqVgoyfLpysLHmQTBGxwmSNdmr6jxstlsDBXC8roWYItV6UBJVkgDo23AaeFr8tkuRlAo7zj2F3g=w544-h544-l90-rj"
+          />
+          <div><a>Presenting The Weeknd</a></div>
+          <div>
+            <a
+              >The Weeknd (위켄드)님,<br />
+              Ariana Grande(아리아나 그란...</a
+            >
+          </div>
+        </div>
+        <div class="music-video">
+          <img src="https://img.youtube.com/vi/VafTMsrnSTU/sddefault.jpg" />
+          <div><a>Sacrifice (Official Music Video)</a></div>
+          <div><a>The Weeknd (위켄드)</a> • 조회수 1352만회</div>
+        </div>
+        <div class="music-video">
+          <img src="https://img.youtube.com/vi/rhTl_OyehF8/sddefault.jpg" />
+          <div><a>Take My Breath (Official Music Video)</a></div>
+          <div><a>The Weeknd (위켄드)</a> • 조회수 8946만회</div>
+        </div>
+        <div class="album">
+          <img
+            src="https://lh3.googleusercontent.com/4Yf98baLQr4gME5LQSj-I0BmRA0_A9BAat92XKoqKyvxweOyZyurox2wteup1n-k1XRTUWaGX0syYSiZ=w544-h544-l90-rj"
+          />
+          <div><a>Pop Hits</a></div>
+          <div>the weekend 외 다수</div>
+        </div>
+      </ul>
+    </main>
     <script src="main.js"></script>
+    <script
+      src="https://kit.fontawesome.com/60b1e1a2af.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
