made another low
made a quick play lists

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>YouTube Music</title>
   </head>
   <body>
+    <!-- nav bar begin -->
     <nav class="nav-bar">
       <a class="nav-logo" href="index.html">
         <img
@@ -37,8 +38,11 @@
         </ul>
       </div>
     </nav>
+    <!-- nav bar end -->
+    <!-- main begin -->
     <main>
-      <div class="container">
+      <!-- first container begin -->
+      <div class="top-container">
         <div class="sm-titles">
           <p class="sm-title">LISTEN TO ‘DAWN FM’</p>
           <h1 class="main-title">The Weeknd’s New Album</h1>
@@ -101,7 +105,210 @@
       <div class="arrow">
         <a href="#"><i class="fas fa-chevron-right fa-sm"></i></a>
       </div>
+      <!-- first container end -->
+      <!-- second container begin -->
+      <div class="lower_container">
+        <div class="sm-titles">
+          <p class="sm-title">이 노래로 뮤직 스테이션 시작하기</p>
+          <h1 class="main-title">빠른 선곡</h1>
+        </div>
+      </div>
+      <div class="quick-music">
+        <div class="xs_album">
+          <img
+            src="https://lh3.googleusercontent.com/RG92soY11tCRckJuiLvwUF0YACEyBcC4m-GUre3ffB6afsGiRGJw1n-8CWtHkC7Q049HmyfU4aPGNtQ=w544-h544-l90-rj"
+          />
+          <div class="quick-music__sm-box">
+            <div class="quick-music__title">
+              <a href="#">i love you</a>
+            </div>
+            <div class="quick-music__singer">
+              <i class="fas fa-stream fa-xs"></i>
+              <a href="#">Billie Eilish(빌리...</a>
+              •
+              <a href="#">WHEN WE ALL F...</a>
+            </div>
+          </div>
+        </div>
+        <div class="xs_album">
+          <img
+            src="https://lh3.googleusercontent.com/5TDQYLomOz018mQJz5GjCxysUJ4__rVl5V20k9apaEnws8tNMzK7Wm_2rZfx-tPDh78_XWYOEmBfS0g=w544-h544-l90-rj"
+          />
+          <div class="quick-music__sm-box">
+            <div class="quick-music__title">
+              <a href="#">Sanctuary</a>
+            </div>
+            <div class="quick-music__singer">
+              <i class="fas fa-stream fa-xs"></i>
+              <a href="#"> Joji </a> •
+              <a href="#">Nectar</a>
+            </div>
+          </div>
+        </div>
+        <div class="xs_album">
+          <img
+            src="https://lh3.googleusercontent.com/lDDamgMBjF1o8ocsdDwoRPo-zuSaHNI3aGeyMpJO_AjNE6HAPZFyJ39wh-A2ySnx2XyPECOQb1HLKn3G=w544-h544-l90-rj"
+          />
+          <div class="quick-music__sm-box">
+            <div class="quick-music__title">
+              <a href="#">Ghost</a>
+            </div>
+            <div class="quick-music__singer">
+              <i class="fas fa-stream fa-xs"></i>
+              <a href="#">Justin Bieber</a> •
+              <a href="#">Justice</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="quick-music">
+        <div class="xs_album">
+          <img
+            src="https://lh3.googleusercontent.com/2vhA3p73paNJ8ptp3K-ALvl7ruhzQDQiOsJLBxHBXCIMRpoHUscQIHurAZXQmbHys7EdBsKRoiEeOV1_=w544-h544-l90-rj  "
+          />
+          <div class="quick-music__sm-box">
+            <div class="quick-music__title">
+              <a href="#">ocean eyes</a>
+            </div>
+            <div class="quick-music__singer">
+              <i class="fas fa-stream fa-xs"></i>
+              <a href="#">Billie Eilish(빌리...</a>
+              •
+              <a href="#">dont smile at me</a>
+            </div>
+          </div>
+        </div>
+        <div class="xs_album">
+          <img
+            src="https://lh3.googleusercontent.com/Ho0VJAPakwjTyXGj3OSv-CmwvaaB9I8jgRW7k9rmsH-ceV8ev2DmDQeaSi670AFQtlJ3B5ypMdGN41Ft=w544-h544-l90-rj"
+          />
+          <div class="quick-music__sm-box">
+            <div class="quick-music__title">
+              <a href="#">Without Me</a>
+            </div>
+            <div class="quick-music__singer">
+              <i class="fas fa-stream fa-xs"></i>
+              <a href="#">Halsey(할시)</a> •
+              <a href="#">Manic</a>
+            </div>
+          </div>
+        </div>
+        <div class="xs_album">
+          <img
+            src="https://lh3.googleusercontent.com/LKHANNfV6CM0WCxrjdjOojWY8N6FSywKXMFbBSXfvtfZ6Fh1ysadjuFl0L266zthTJvnSc6BjBzf7MoEQA=w544-h544-l90-rj"
+          />
+          <div class="quick-music__sm-box">
+            <div class="quick-music__title">
+              <a href="#">Woman</a>
+            </div>
+            <div class="quick-music__singer">
+              <i class="fas fa-stream fa-xs"></i>
+              <a href="#">Doja Cat</a> •
+              <a href="#">Planet Her</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="quick-music">
+        <div class="xs_album">
+          <img
+            src="https://lh3.googleusercontent.com/NKCYq-UOFLyoOPStS-5ewDwDn4Sg8nAZNGWAW-f3_k6B_kybZ83CsXIdViQA3edmquuHl3Fmy6Lg8mG3Og=w544-h544-l90-rj"
+          />
+          <div class="quick-music__sm-box">
+            <div class="quick-music__title">
+              <a href="#">Angels Speak (feat. Poo Bear)</a>
+            </div>
+            <div class="quick-music__singer">
+              <i class="fas fa-stream fa-xs"></i>
+              <a href="#">Justin Bieber</a> •
+              <a href="#"> Justice (The Compl...</a>
+            </div>
+          </div>
+        </div>
+        <div class="xs_album">
+          <img
+            src="https://lh3.googleusercontent.com/rOUiGja81fBLATOfzH7YbfID3nhNr5Wv4yu_H22YEkegNkS4NbPdZdMQvmE_AO0CuwyLkdrOc6jPvocn8A=w544-h544-l90-rj"
+          />
+          <div class="quick-music__sm-box">
+            <div class="quick-music__title">
+              <a href="#">SLOW DANCING IN THE DARK</a>
+            </div>
+            <div class="quick-music__singer">
+              <i class="fas fa-stream fa-xs"></i>
+              <a href="#">Joji</a> •
+              <a href="#">BALLADS 1</a>
+            </div>
+          </div>
+        </div>
+        <div class="xs_album">
+          <img
+            src="https://lh3.googleusercontent.com/_c4JMCiDeaC2RRfShXddOuIV_A7oCL4m1R6-YK-3TDlsYgNQTXwxV0f-TTJrsO1StMt07qW3O6XNPSNt=w544-h544-l90-rj"
+          />
+          <div class="quick-music__sm-box">
+            <div class="quick-music__title">
+              <a href="#">EARFQUAKE</a>
+            </div>
+            <div class="quick-music__singer">
+              <i class="fas fa-stream fa-xs"></i>
+              <a href="#">타일러 더 크리에이터</a> •
+              <a href="#">IGOR</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="quick-music">
+        <div class="xs_album">
+          <img
+            src="https://lh3.googleusercontent.com/x87vTXqhZYY2VGMTmXkbCJG-3l58O37sFVsA9pluP6nxXanJrNs-uFYezP9W3CDg152MYmyOZQEYTG2V=w544-h544-l90-rj"
+          />
+          <div class="quick-music__sm-box">
+            <div class="quick-music__title">
+              <a href="#">내 곁에서 떠나가지 말아요</a>
+            </div>
+            <div class="quick-music__singer">
+              <i class="fas fa-stream fa-xs"></i>
+              <a href="#">콜드</a> •
+              <a href="#">Love, Pt. 1</a>
+            </div>
+          </div>
+        </div>
+        <div class="xs_album">
+          <img
+            src="https://lh3.googleusercontent.com/F_Y4qALxX0jQSbC_bXNdObNnS3-KlXjTbStRC9gN64gtr3xLCr6Ytdcj804-cFvM7Pfd7e9RHkUDSE_v=w544-h544-l90-rj"
+          />
+          <div class="quick-music__sm-box">
+            <div class="quick-music__title">
+              <a href="#">Good Days</a>
+            </div>
+            <div class="quick-music__singer">
+              <i class="fas fa-stream fa-xs"></i>
+              <a href="#">싱글 • SZA</a> •
+              <a href="#">Good Days</a>
+            </div>
+          </div>
+        </div>
+        <div class="xs_album">
+          <img
+            src="https://lh3.googleusercontent.com/4vO3oNexeyaApsZhNqU5htFP7DlO8PfKS7uE6Ww9VQDzF9V6C9rn5OqysBpEenCpQT4DvMfNS5Z53AUQ=w544-h544-l90-rj"
+          />
+          <div class="quick-music__sm-box">
+            <div class="quick-music__title">
+              <a href="#">run!(feat. 저스디스)</a>
+            </div>
+            <div class="quick-music__singer">
+              <i class="fas fa-stream fa-xs"></i>
+              <a href="#">나플라</a> •
+              <a href="#">natural high</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="arrow-2">
+        <a href="#"><i class="fas fa-chevron-right fa-sm"></i></a>
+      </div>
+      <!-- second container end -->
     </main>
+    <!-- main end -->
     <script src="main.js"></script>
     <script
       src="https://kit.fontawesome.com/60b1e1a2af.js"
