added another line

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             </div>
             <div class="quick-music__singer">
               <i class="fas fa-stream fa-xs"></i>
-              <a href="#">Billie Eilish(빌리...</a>
+              <a href="#">Billie Eilish</a>
               •
               <a href="#">WHEN WE ALL F...</a>
             </div>
@@ -307,6 +307,169 @@
         <a href="#"><i class="fas fa-chevron-right fa-sm"></i></a>
       </div>
       <!-- second container end -->
+      <!-- third container begin -->
+      <div class="lower_container__mix">
+        <div class="sm-titles">
+          <h1 class="main-title">맞춤 믹스</h1>
+        </div>
+      </div>
+      <ul class="contents">
+        <div class="mix-album">
+          <img
+            src="https://lh3.googleusercontent.com/Oy0MoVVYmt7e2QhRbN4mrnerSbnEGEbtQxeRriRhMkHDZC1a-HUVsL6ziQy3tkDMoVbsogBHvj2WqtLD=w544-h544-l90-rj"
+          />
+          <div class="mix-album__name">
+            <a href="#">나만의 믹스</a>
+          </div>
+          <div class="mix-album__singer">
+            <a href="#"
+              >Johnny Stimson님, Player Dave님, MISO님, offonoff(오프 온
+              오프)님</a
+            >
+          </div>
+        </div>
+        <div class="mix-album">
+          <img
+            src="https://lh3.googleusercontent.com/9AM_jyS9AIHVw8s8i1Z1XL_Lym9QOqurCPj6rohb_Xklpd8FRfEXFBJLAQEwCDQvlJFzRGt0O88lVfW8=w544-h544-l90-rj"
+          />
+          <div class="mix-album__name">
+            <a href="#">나만을 위한 맞춤 믹스 1</a>
+          </div>
+          <div class="mix-album__singer">
+            <a href="#">나플라님, E SENS님, DEAN(딘)님, keshi님</a>
+          </div>
+        </div>
+        <div class="mix-album">
+          <img
+            src="https://lh3.googleusercontent.com/UHrWe1flnniamo7BisGxrtzLp-SrJXmpQ5tT-iG-1E1wTWDR4f9yC7wNy_-rKg-8q9YZZUU4WdV01SNT=w544-h544-l90-rj"
+          />
+          <div class="mix-album__name">
+            <a href="#">나만을 위한 맞춤 믹스 2</a>
+          </div>
+          <div class="mix-album__singer">
+            <a href="#">Kudasaibeats님, Kupla님, sleepy fish님, Saib님</a>
+          </div>
+        </div>
+        <div class="mix-album">
+          <img
+            src="https://lh3.googleusercontent.com/DWyKqbU7QSMYKNgsmGkax_s3AZNId8T0OaoLqSYHOWeulfHN73tX2w2K9yJvH-AhKTOwKkH2QI88Ug=w544-h544-l90-rj"
+          />
+          <div class="mix-album__name">
+            <a href="#">나만을 위한 맞춤 믹스 3</a>
+          </div>
+          <div class="mix-album__singer">
+            <a href="#"
+              >Billie Eilish(빌리 아일리시)님, Regard님, Khalid(칼리드)님</a
+            >
+          </div>
+        </div>
+        <div class="mix-album">
+          <img
+            src="https://lh3.googleusercontent.com/s0HPCLpLd1kfs3cEIVZSEpEYCqkCRoF3gqJMmbr17EeD9VCRL9Lo3sJhQ6tpThBgE_Ms3guZjXTtmc4I=w544-h544-l90-rj"
+          />
+          <div class="mix-album__name">
+            <a href="#">나만을 위한 맞춤 믹스 4</a>
+          </div>
+          <div class="mix-album__singer">
+            <a href="#">Doja Cat(도자캣)님, The Weeknd (위켄드)님, 베니님</a>
+          </div>
+        </div>
+        <div class="mix-album">
+          <img
+            src="https://lh3.googleusercontent.com/YNZtLC224ykYScfS9TbP3uahnI92zkz1b2lmuRuMKlbnfY5xbUmZmm4Z_79ELYxXP9lK8UmBDFrdlQ=w544-h544-l90-rj"
+          />
+          <div class="mix-album__name">
+            <a href="#">나만을 위한 맞춤 믹스 5</a>
+          </div>
+          <div class="mix-album__singer">
+            <a href="#"
+              >Childish Gambino(차일디쉬 감비노)님, Dre'es님, 브루노 마스님</a
+            >
+          </div>
+        </div>
+      </ul>
+      <div class="arrow-3">
+        <a href="#"><i class="fas fa-chevron-right fa-sm"></i></a>
+      </div>
+      <!-- third container end -->
+      <!-- fourth container begin -->
+      <div class="lower-container__recommend">
+        <div class="recommend-img">
+          <img
+            src="https://thumbor.forbes.com/thumbor/fit-in/416x416/filters%3Aformat%28jpg%29/https%3A%2F%2Fspecials-images.forbesimg.com%2Fimageserve%2F585ae6c031358e698adc2d8f%2F0x0.jpg%3Fbackground%3D000000%26cropX1%3D21%26cropX2%3D744%26cropY1%3D0%26cropY2%3D724"
+          />
+        </div>
+        <div class="sm-titles__recommend">
+          <p class="sm-title">아래 아티스트를 좋아한다면</p>
+          <h1 class="main-title">Frank Ocean</h1>
+        </div>
+      </div>
+      <ul class="artists">
+        <div class="artist">
+          <img
+            src="https://lh3.googleusercontent.com/l6g88kXG2_jEgR23dQEtjzAdfgXJJaAf41PP-z9souxa6rshyfU_9HxxJQcGcOOxj6dxRhemRPLyEKE=w544-h544-p-l90-rj"
+          />
+          <div class="artist__name">
+            <a href="#">Childish Gambino(차일디쉬 감비노)</a>
+          </div>
+          <div class="subscribers">구독자 588만명</div>
+        </div>
+        <div class="album">
+          <img
+            src="https://lh3.googleusercontent.com/Wu5tjP95PMYsnsNvHvpeNI6Ol3mDOQ5iBB3Qp5A5Gf9O7YH2xWTNl9xw6VnWm_fJOche2UG2yfLjRmFg=w544-h544-l90-rj"
+          />
+          <div class="album__name">
+            <a href="#">Freudian</a>
+          </div>
+          <div class="album__singer">
+            <i class="fas fa-euro-sign fa-xs"></i> 앨범 •
+            <a href="#">대니얼 시저</a>
+          </div>
+        </div>
+        <div class="artist">
+          <img
+            src="https://lh3.googleusercontent.com/eg79ax2cuLUyEoJzRCNOQ-B9nx569VVEI5q1dKWvRhkg7bJdYHpkf_hE4qtYdqrK234NDOSdu7qQHI8=w544-h544-p-l90-rj"
+          />
+          <div class="artist__name">
+            <a href="#">The Internet</a>
+          </div>
+          <div class="subscribers">구독자 42.3만명</div>
+        </div>
+        <div class="artist">
+          <img
+            src="https://lh3.googleusercontent.com/SfmACPjoL8612fSOwQdWleZ_HSL4n4_jCSZM08uqjwmBHIp7IuHfTRtCD_1PEiBRbpAs7TY9iUlIu6_T=w544-h544-p-l90-rj"
+          />
+          <div class="artist__name">
+            <a href="#">스티브 레이시</a>
+          </div>
+          <div class="subscribers">구독자 28.9만명</div>
+        </div>
+        <div class="album">
+          <img
+            src="https://lh3.googleusercontent.com/_c4JMCiDeaC2RRfShXddOuIV_A7oCL4m1R6-YK-3TDlsYgNQTXwxV0f-TTJrsO1StMt07qW3O6XNPSNt=w544-h544-l90-rj"
+          />
+          <div class="album__name">
+            <a href="#">IGOR</a>
+          </div>
+          <div class="album__singer">
+            <i class="fas fa-euro-sign fa-xs"></i> 앨범 •
+            <a href="#">타일러 더...</a>
+          </div>
+        </div>
+        <div class="artist">
+          <img
+            src="https://lh3.googleusercontent.com/c-ILO8kXxjY6HhqSkoClWPUtPfHYQW6iHr51EiQOaZiUZ7IZr_WwwkyqclAOFyZgLpC3R0dPXuZiRt0=w544-h544-p-l90-rj"
+          />
+          <div class="artist__name">
+            <a href="#">SZA</a>
+          </div>
+          <div class="subscribers">구독자 259만명</div>
+        </div>
+      </ul>
+      <div class="arrow-4">
+        <a href="#"><i class="fas fa-chevron-right fa-sm"></i></a>
+      </div>
+      <!-- fourth container end -->
     </main>
     <!-- main end -->
     <script src="main.js"></script>
