retouched album photo size

--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
           </div>
           <div class="subscribers">구독자 588만명</div>
         </div>
-        <div class="album">
+        <div class="album__recommend">
           <img
             src="https://lh3.googleusercontent.com/Wu5tjP95PMYsnsNvHvpeNI6Ol3mDOQ5iBB3Qp5A5Gf9O7YH2xWTNl9xw6VnWm_fJOche2UG2yfLjRmFg=w544-h544-l90-rj"
           />
@@ -444,7 +444,7 @@
           </div>
           <div class="subscribers">구독자 28.9만명</div>
         </div>
-        <div class="album">
+        <div class="album__recommend">
           <img
             src="https://lh3.googleusercontent.com/_c4JMCiDeaC2RRfShXddOuIV_A7oCL4m1R6-YK-3TDlsYgNQTXwxV0f-TTJrsO1StMt07qW3O6XNPSNt=w544-h544-l90-rj"
           />
